@@ -35,82 +35,91 @@
             </control>
             <control type="group">
 				<animation effect="slide" end="0,-65" time="300" tween="cubic" easing="inout" condition="Window.IsActive(videoosd)">Conditional</animation>
-				<control type="label">
-					<posx>400</posx>
-					<posy>249</posy>
-					<width>210</width>
-					<label>208</label>
-					<font>Font-Alaska-S28-L</font>
-					<textcolor>mod-infotags-d</textcolor>
-					<shadowcolor>33ffffff</shadowcolor>
-					<scroll>false</scroll>
-					<align>right</align>
-					<visible>Player.Playing</visible>
-				</control>	
-				<control type="label">
-					<posx>400</posx>
-					<posy>249</posy>
-					<width>210</width>
-					<label>112</label>
-					<font>Font-Alaska-S28-L</font>
-					<textcolor>mod-infotags-d</textcolor>
-					<shadowcolor>33ffffff</shadowcolor>
-					<scroll>false</scroll>
-					<align>right</align>
-					<visible>Player.Paused</visible>
-				</control>	
-				<control type="label">
-					<posx>400</posx>
-					<posy>249</posy>
-					<width>210</width>
-					<label>773</label>
-					<font>Font-Alaska-S28-L</font>
-					<textcolor>mod-infotags-d</textcolor>
-					<shadowcolor>33ffffff</shadowcolor>
-					<scroll>false</scroll>
-					<align>right</align>
-					<visible>Player.Seeking | Player.Forwarding | Player.Rewinding</visible>
+				<control type="group">
+					<visible>!Skin.HasSetting(videoosd.clearlogo) | [[Player.ShowInfo | Window.IsVisible(fullscreeninfo)] + !Window.IsActive(videoosd) + !IsEmpty(Window(seekbar).Property(ExtendPlot)) + !VideoPlayer.Content(LiveTV)] | ![Player.ShowInfo | Window.IsVisible(fullscreeninfo)]</visible>
+					<animation type="Visible" reversible="false">
+						<effect type="fade" start="0" end="100" time="300" tween="sine" easing="inout" delay="150" />
+					</animation>
+					<animation type="Hidden" reversible="false">
+						<effect type="fade" start="100" end="0" time="200" tween="sine" easing="out" />
+					</animation>
+					<control type="label">
+						<posx>400</posx>
+						<posy>249</posy>
+						<width>210</width>
+						<label>208</label>
+						<font>Font-Alaska-S28-L</font>
+						<textcolor>mod-infotags-d</textcolor>
+						<shadowcolor>33ffffff</shadowcolor>
+						<scroll>false</scroll>
+						<align>right</align>
+						<visible>Player.Playing</visible>
+					</control>	
+					<control type="label">
+						<posx>400</posx>
+						<posy>249</posy>
+						<width>210</width>
+						<label>112</label>
+						<font>Font-Alaska-S28-L</font>
+						<textcolor>mod-infotags-d</textcolor>
+						<shadowcolor>33ffffff</shadowcolor>
+						<scroll>false</scroll>
+						<align>right</align>
+						<visible>Player.Paused</visible>
+					</control>	
+					<control type="label">
+						<posx>400</posx>
+						<posy>249</posy>
+						<width>210</width>
+						<label>773</label>
+						<font>Font-Alaska-S28-L</font>
+						<textcolor>mod-infotags-d</textcolor>
+						<shadowcolor>33ffffff</shadowcolor>
+						<scroll>false</scroll>
+						<align>right</align>
+						<visible>Player.Seeking | Player.Forwarding | Player.Rewinding</visible>
+					</control>
+					<control type="image">
+						<posx>390</posx>
+						<posy>213</posy>
+						<width>100</width>
+						<height>100</height>
+						<texture>overlays/nowplaying/play.png</texture>
+						<colordiffuse>mod-infotags-d</colordiffuse>
+						<visible>Player.Playing</visible>
+					</control>
+					<control type="image">
+						<posx>390</posx>
+						<posy>213</posy>
+						<width>100</width>
+						<height>100</height>
+						<texture>overlays/nowplaying/pause.png</texture>
+						<colordiffuse>mod-infotags-d</colordiffuse>
+						<visible>Player.Paused</visible>
+					</control>
+					<control type="label">
+						<posx>430</posx>
+						<posy>244</posy>
+						<width>661</width>
+						<label>»</label>
+						<font>Font-Alaska-S45-BL</font>
+						<textcolor>mod-infotags-d</textcolor>
+						<scroll>false</scroll>
+						<align>left</align>
+						<visible>Player.Forwarding</visible>
+					</control>	
+					<control type="label">
+						<posx>430</posx>
+						<posy>244</posy>
+						<width>661</width>
+						<label>«</label>
+						<font>Font-Alaska-S45-BL</font>
+						<textcolor>mod-infotags-d</textcolor>
+						<scroll>false</scroll>
+						<align>left</align>
+						<visible>Player.Rewinding</visible>
+					</control>	
 				</control>
-				<control type="image">
-					<posx>390</posx>
-					<posy>213</posy>
-					<width>100</width>
-					<height>100</height>
-					<texture>overlays/nowplaying/play.png</texture>
-					<colordiffuse>mod-infotags-d</colordiffuse>
-					<visible>Player.Playing</visible>
-				</control>
-				<control type="image">
-					<posx>390</posx>
-					<posy>213</posy>
-					<width>100</width>
-					<height>100</height>
-					<texture>overlays/nowplaying/pause.png</texture>
-					<colordiffuse>mod-infotags-d</colordiffuse>
-					<visible>Player.Paused</visible>
-				</control>
-				<control type="label">
-					<posx>430</posx>
-					<posy>244</posy>
-					<width>661</width>
-					<label>»</label>
-					<font>Font-Alaska-S45-BL</font>
-					<textcolor>mod-infotags-d</textcolor>
-					<scroll>false</scroll>
-					<align>left</align>
-					<visible>Player.Forwarding</visible>
-				</control>	
-				<control type="label">
-					<posx>430</posx>
-					<posy>244</posy>
-					<width>661</width>
-					<label>«</label>
-					<font>Font-Alaska-S45-BL</font>
-					<textcolor>mod-infotags-d</textcolor>
-					<scroll>false</scroll>
-					<align>left</align>
-					<visible>Player.Rewinding</visible>
-				</control>	
 				<control type="progress">
 					<posx>480</posx>
 					<posy>251</posy>
@@ -197,8 +206,19 @@
 						<aspectratio scalediffuse="false" align="right">keep</aspectratio>
 						<visible>VideoPlayer.Content(LiveTV)</visible>
 					</control>
+					<control type="image">
+						<description>Thumb</description>
+						<posx>520</posx>
+							<posy>96</posy>
+							<width>275</width>
+							<height>155</height>
+						<texture background="true">$INFO[Player.Art(clearlogo)]</texture>
+						<aspectratio scalediffuse="false" align="right" aligny="center">keep</aspectratio>
+						<visible>!VideoPlayer.Content(LiveTV) + Skin.HasSetting(videoosd.clearlogo)</visible>
+						<animation effect="slide" end="0,-120" time="300" tween="cubic" easing="inout" condition="[[Player.ShowInfo | Window.IsVisible(fullscreeninfo)] + !Window.IsActive(videoosd) + !IsEmpty(Window(seekbar).Property(ExtendPlot)) + !VideoPlayer.Content(LiveTV)]">Conditional</animation>
+					</control>
 					<control type="group">
-						<visible>!VideoPlayer.Content(LiveTV)</visible>
+						<visible>!VideoPlayer.Content(LiveTV) + !Skin.HasSetting(videoosd.clearlogo)</visible>
 						<posx>-28</posx>
 						<posy>-62</posy>
 						<control type="image">
