@@ -36,3 +36,4 @@ String localization
   - MyPrograms
   
 Video Info/OSD show plot on up.
+Video Info/OSD clearlogo preference
